--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -22,6 +22,9 @@ jobs:
           restore-keys: |
             session
 
+      - name: Deploy to Cloudflare Workers with Wrangler
+        uses: cloudflare/wrangler-action@v3.14.1
+        
       - name: Sign
         run: |
           PYTHONUNBUFFERED=1 ./sign.py
