--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -23,7 +23,10 @@ jobs:
             session
 
       - name: Deploy to Cloudflare Workers with Wrangler
-        uses: cloudflare/wrangler-action
+        uses: cloudflare/wrangler-action@v4
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          wranglerVersion: '4'
         
       - name: Sign
         run: |
