--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   sign:
-    runs-on: macos-26
+    runs-on: macos-latest
     timeout-minutes: 30
     env:
       SECRET_URL: "${{ secrets.SECRET_URL }}"
@@ -26,7 +26,7 @@ jobs:
         uses: cloudflare/wrangler-action@v3.14.1
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          wranglerVersion: '3.14.1'
+          # The wranglerVersion line is removed entirely
         
       - name: Sign
         run: |
